[gd_scene load_steps=8 format=2]

[ext_resource path="res://fighters/FireBall.gd" type="Script" id=1]
[ext_resource path="res://gfx/fighters/MrPalo_Fireball.png" type="Texture" id=2]
[ext_resource path="res://fighters/ProximityBox.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Impact"
length = 0.2
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Normal"
length = 0.35
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.116667, 0.233333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 10, 9 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 60, 10 )

[node name="FireBall" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 7
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Impact = SubResource( 1 )
anims/Normal = SubResource( 2 )

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2( 4, 1 )
shape = SubResource( 3 )

[node name="ProximityBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="ProxBox1" type="CollisionShape2D" parent="ProximityBox"]
position = Vector2( 64, 27 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_FireBall_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
